Fixed mobile view overflow

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   font-family: "Segoe UI", sans-serif;
 }
-
+html, body {
+  overflow-x: hidden;
+}
 /* NAVBAR */
 .navbar {
   position: sticky;
